# forkate

./: .gitignore  Cargo.toml
src/: certificate.rs  main.rs  templates.rs
static/styles/: base.css
templates/: base.html  blog.html
templates/includes/: footer.html  header.html  menu.html
templates/pages/: home.md  not_found.md
